Fix alignment of leftmost title

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,7 +44,7 @@ input[type="date"] {
 }
 
 .padding-left {
-    padding-left: 15px;
+    padding-left: 11px;
 }
 
 .green {
